--- a/src/assets/scss/views/home/_index.scss
+++ b/src/assets/scss/views/home/_index.scss
@@ -1,7 +1,7 @@
 @import './selector';
 @import './registry';
 
-.event {
+.events {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -13,11 +13,24 @@
 		position: fixed;
 		height: clamp(10vh, 10vh + 1rem, 15vh);
 		width: clamp(15vh, 10vh + 1rem, 20vh);
-		bottom: 0;
+		top: 85dvh;
 
 		& svg {
 			fill: $foreground-disabled;
 			opacity: 0.5;
 		}
+	}
+
+	&__title {
+		font-family: 'Nunito';
+		font-size: clamp(6vh, 6vh + 1.2rem, 8vh);
+		font-weight: bold;
+		text-align: center;
+		color: $foreground;
+		height: 15vh;
+		width: 100%;
+		white-space: nowrap;
+		overflow: hidden;
+		overflow-x: auto;
 	}
 }
