--- a/src/assets/scss/views/home/_selector.scss
+++ b/src/assets/scss/views/home/_selector.scss
@@ -1,18 +1,16 @@
-.event {
+.events {
 	&__selector {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		gap: 4vh 0;
 		width: 90%;
-		padding: 1vh 0 0 0;
+		height: 100%;
+		padding-bottom: 4vh;
 		margin: 0 auto;
 
-		h1 {
-			font-family: 'DarumadropOne';
-			font-size: clamp(6vh, 6vh + 1.2rem, 8vh);
-			text-align: center;
-			color: $foreground;
+		.events__title {
+			margin-top: 4vh;
 		}
 
 		.--new-event {
@@ -20,7 +18,7 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: cen;
+			justify-content: center;
 			gap: 1.5vh 0;
 			background-color: transparent;
 			border: solid 1px $foreground;
@@ -28,6 +26,7 @@
 			color: $foreground;
 			font-family: 'Nunito';
 			font-size: 2vh;
+			font-weight: bolder;
 			padding: 2vh;
 
 			-webkit-transition: background-color ease-in-out .1s, border-color ease-in-out .1s, color ease-in-out .1s;
@@ -38,7 +37,9 @@
 
 			&:hover {
 				cursor: pointer;
+			}
 
+			&:hover, &:focus {
 				background-color: $foreground-brighter;
 				border-color: $foreground-brighter;
 				color: $accent-bright;
@@ -53,11 +54,11 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			overflow-x: hidden;
 			gap: 2vh 0;
+			padding: 4vh 0;
 			width: 90%;
 			margin: 0 auto;
-			padding: 5vh 0;
+			overflow: hidden;
 
 			li {
 				display: flex;
@@ -65,24 +66,13 @@
 				align-items: center;
 				background-color: $foreground-bright;
 				border-radius: 12px;
-				padding: 2vh;
 				width: 80%;
+				height: 8vh;
+				overflow: hidden;
 
 				-webkit-box-shadow: 4px 4px 4px 0px rgba(0,0,0,0.1);
 				-moz-box-shadow: 	4px 4px 4px 0px rgba(0,0,0,0.1);
 				box-shadow: 		4px 4px 4px 0px rgba(0,0,0,0.1);
-
-				-webkit-transition: background-color ease-in-out .1s;
-				-moz-transition: 	background-color ease-in-out .1s;
-				-ms-transition: 	background-color ease-in-out .1s;
-				-o-transition: 		background-color ease-in-out .1s;
-				transition: 		background-color ease-in-out .1s;
-
-				&:hover {
-					cursor: pointer;
-
-					background-color: $foreground-brighter;
-				}
 
 				button {
 					display: flex;
@@ -91,6 +81,7 @@
 					align-items: center;
 					width: 100%;
 					height: 100%;
+					padding: 2vh;
 					background-color: transparent;
 					outline: transparent;
 					color: $accent-bright;
@@ -98,12 +89,28 @@
 					font-size: 2vh;
 					font-weight: bold;
 
+					-webkit-transition: background-color ease-in-out .1s;
+					-moz-transition: 	background-color ease-in-out .1s;
+					-ms-transition: 	background-color ease-in-out .1s;
+					-o-transition: 		background-color ease-in-out .1s;
+					transition: 		background-color ease-in-out .1s;
+
+					&:hover {
+						cursor: pointer;
+	
+						background-color: $foreground-brighter;
+					}
+
 					span {
-						flex: 2;
+						width: 100%;
+						white-space: nowrap;
+						overflow: hidden;
+						overflow-x: auto;
 					}
 		
 					mat-icon {
 						transform: scale(1.8);
+						pointer-events: none;
 					}
 				}
 			}
@@ -135,6 +142,7 @@
 		mat-tab-group {
 			width: 100%;
 			height: 100%;
+			overflow-y: auto;
 
 			.mat-mdc-tab-labels {
 				gap: 0 1vh;
